Fixed map bottom spacing when career name is too long

--- a/app/assets/stylesheets/module/_career-map.scss
+++ b/app/assets/stylesheets/module/_career-map.scss
@@ -1,5 +1,5 @@
 .career-map {
-  height: rem(580);
+  padding-bottom: rem(30);
 
   @include e('details') {
     margin-top: rem(2);
